test/sema/member_expr_non_struct_type.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s

fn main() -> void {
    let x = 1;

    let y = x.x;
    // CHECK: [[# @LINE - 1 ]]:13: error: cannot access member of 'i32'
}